--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <a id="leaderboard">View Highscores <i class="fas fa-hand-point-left fa-lg"></i>
         </i></a> 
-        <div class="timer">Time: <span>00</span> seconds</div>
+        <div class="timer">Time: <span class="seconds">00</span> seconds</div>
     </header>
     <main>
         <div class="container questionaire">
@@ -25,6 +25,7 @@
                 <div class="option">Option#1</div>
                 <div class="option">Option#1</div>
             </div>
+            <div class="answer"></div>
         </div>
 
         <div class="container quiz-start">
@@ -35,12 +36,12 @@
 
         <div class="container quiz-finish">
             <h2>All done!</h2>
-            <p>Your final score is 40.</p>
+            <p>Your final score is <span class="score">0</span>.</p>
             <div class="user">
                 <div class="username">
                     <span>Enter initials: </span>
-                    <input type="text" name="username" id="user">
-                    <div class="btn">Submit</div>
+                    <input type="text" onchange="saveUser(this.value)" value="" name="username" id="user">
+                    <div class="btn" onsubmit="submitUser()">Submit</div>
                 </div>
             </div>
         </div>
@@ -48,11 +49,6 @@
         <div class="container scores">
             <div class="info">
                 <h2>Highscores</h2>
-                <p>1. CJ - 43</p>
-                <p>2. AB - 00</p>
-                <p>3. CD - 12</p>
-                <p>4. EF - 30</p>
-                <p>5. GH - 01</p>
             </div>
 
             <div class="btns">
